# SoccerFun

./: SoccerFun.cabal
SoccerFun/: MatchGame.hs  Player.hs  Random.hs  Referee.hs  RefereeAction.hs  Tape.hs
SoccerFun/Referee/: Ivanov.hs
SoccerFun/Tape/: Record.hs
exe/: Main.hs  Makefile  makeLoop.sh  mkIndex.sh
lib/SoccerFun/: Ball.hs  Field.hs  Geometry.hs  MatchControl.hs  MatchGame.hs  Player.hs  Prelude.hs  Referee.hs  RefereeAction.hs  Tape.hs  Team.hs  Types.hs
lib/SoccerFun/Referee/: Ivanov.hs
lib/SoccerFun/Tape/Record/: Template.hs
template/: Main.hs  Makefile
template/Children/: Child.hs  Team.hs
tournament/: mkIndex.sh
