Cabal-Version:  3.0
Name:           SoccerFun
Version:        0.5.3
Copyright:      (c) 2010, Jan Rochel
License:        BSD-3-Clause
License-File:   LICENSE
Author:         Jan Rochel
Maintainer:     jan@rochel.info
Homepage:       http://rochel.info/
Stability:      unmaintained
Build-Type:     Simple
Synopsis:       Football simulation framework for teaching functional programming
Description:
  This is a Haskell port of the the SoccerFun framework originally implemented in Clean. From the website: Soccer-Fun is an educational project to stimulate functional programming by thinking about, designing, implementing, running, and competing with the brains of football players! It is open for participation by everybody who likes to contribute. It is not restricted to a particular functional programming language.
  http://www.cs.ru.nl/~peter88/SoccerFun/SoccerFun.html
Category:       Game, Education, AI
Data-Files:
  template/Main.hs template/Makefile template/Children/Child.hs template/Children/Team.hs
  tournament/mkIndex.sh tournament/makeLoop.sh tournament/Makefile SoccerFun/Tape/Record/Template.hs

Common common
  Default-Language: Haskell2010
  Default-Extensions:
    UnicodeSyntax
    NamedFieldPuns
    Rank2Types
    ExistentialQuantification
    FlexibleInstances
    TemplateHaskell
    FlexibleContexts
  Build-Depends:
    base ^>= {4.14, 4.15, 4.16},
    base-unicode-symbols ^>= 0.2,
    binary ^>= 0.8,
    directory ^>= 1.3,
    mtl ^>= 2.2,
    process ^>= 1.6,
    random ^>= 1.2,
    zlib ^>= 0.6,

Library
  Import: common
  Hs-Source-Dirs: lib
  Exposed-Modules:
    SoccerFun.Ball
    SoccerFun.Types
    SoccerFun.Team
    SoccerFun.Geometry
    SoccerFun.Field
    SoccerFun.Player
    SoccerFun.RefereeAction
    SoccerFun.Tape
    SoccerFun.MatchControl
    SoccerFun.MatchGame
    SoccerFun.Referee.Ivanov
  Other-Modules:
    SoccerFun.Referee
    SoccerFun.Random
    SoccerFun.Prelude
    Paths_SoccerFun

Executable sfRecord
  Import: common
  Hs-Source-Dirs: exe
  Build-Depends:
    SoccerFun
  Main-Is: Main.hs
